adds user document, dto and its related layers for basic CRUD operations. adds security config for basic access to endpoints in tests.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,12 @@ spring:
     name: user-service
   profiles:
     active: dev
+  mongodb:
+    host: localhost
+    port: 27017
+    database: userdb
+    username: root
+    password: example
+    authentication-database: admin
+server:
+  port: 8081
